--- a/agent/helpers/Makefile.depend
+++ b/agent/helpers/Makefile.depend
@@ -32,6 +32,7 @@
 ./all_helpers.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./all_helpers.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./all_helpers.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./all_helpers.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./all_helpers.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./all_helpers.lo: ../../include/net-snmp/library/ucd_compat.h
 ./all_helpers.lo: ../../include/net-snmp/library/mib.h
@@ -141,6 +142,7 @@
 ./baby_steps.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./baby_steps.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./baby_steps.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./baby_steps.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./baby_steps.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./baby_steps.lo: ../../include/net-snmp/library/ucd_compat.h
 ./baby_steps.lo: ../../include/net-snmp/library/mib.h
@@ -247,6 +249,7 @@
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./bulk_to_next.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/ucd_compat.h
 ./bulk_to_next.lo: ../../include/net-snmp/library/mib.h
@@ -355,6 +358,7 @@
 ./cache_handler.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./cache_handler.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./cache_handler.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./cache_handler.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./cache_handler.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./cache_handler.lo: ../../include/net-snmp/library/ucd_compat.h
 ./cache_handler.lo: ../../include/net-snmp/library/mib.h
@@ -461,6 +465,7 @@
 ./debug_handler.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./debug_handler.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./debug_handler.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./debug_handler.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./debug_handler.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./debug_handler.lo: ../../include/net-snmp/library/ucd_compat.h
 ./debug_handler.lo: ../../include/net-snmp/library/mib.h
@@ -569,6 +574,7 @@
 ./instance.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./instance.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./instance.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./instance.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./instance.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./instance.lo: ../../include/net-snmp/library/ucd_compat.h
 ./instance.lo: ../../include/net-snmp/library/mib.h
@@ -676,6 +682,7 @@
 ./mode_end_call.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./mode_end_call.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./mode_end_call.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./mode_end_call.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./mode_end_call.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./mode_end_call.lo: ../../include/net-snmp/library/ucd_compat.h
 ./mode_end_call.lo: ../../include/net-snmp/library/mib.h
@@ -782,6 +789,7 @@
 ./multiplexer.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./multiplexer.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./multiplexer.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./multiplexer.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./multiplexer.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./multiplexer.lo: ../../include/net-snmp/library/ucd_compat.h
 ./multiplexer.lo: ../../include/net-snmp/library/mib.h
@@ -889,6 +897,7 @@
 ./null.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./null.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./null.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./null.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./null.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./null.lo: ../../include/net-snmp/library/ucd_compat.h
 ./null.lo: ../../include/net-snmp/library/mib.h
@@ -996,6 +1005,7 @@
 ./old_api.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./old_api.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./old_api.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./old_api.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./old_api.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./old_api.lo: ../../include/net-snmp/library/ucd_compat.h
 ./old_api.lo: ../../include/net-snmp/library/mib.h
@@ -1104,6 +1114,7 @@
 ./read_only.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./read_only.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./read_only.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./read_only.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./read_only.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./read_only.lo: ../../include/net-snmp/library/ucd_compat.h
 ./read_only.lo: ../../include/net-snmp/library/mib.h
@@ -1212,6 +1223,7 @@
 ./row_merge.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./row_merge.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./row_merge.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./row_merge.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./row_merge.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./row_merge.lo: ../../include/net-snmp/library/ucd_compat.h
 ./row_merge.lo: ../../include/net-snmp/library/mib.h
@@ -1318,6 +1330,7 @@
 ./scalar.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./scalar.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./scalar.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./scalar.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./scalar.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./scalar.lo: ../../include/net-snmp/library/ucd_compat.h
 ./scalar.lo: ../../include/net-snmp/library/mib.h
@@ -1425,6 +1438,7 @@
 ./scalar_group.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./scalar_group.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./scalar_group.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./scalar_group.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./scalar_group.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./scalar_group.lo: ../../include/net-snmp/library/ucd_compat.h
 ./scalar_group.lo: ../../include/net-snmp/library/mib.h
@@ -1532,6 +1546,7 @@
 ./serialize.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./serialize.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./serialize.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./serialize.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./serialize.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./serialize.lo: ../../include/net-snmp/library/ucd_compat.h
 ./serialize.lo: ../../include/net-snmp/library/mib.h
@@ -1640,6 +1655,7 @@
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./snmp_get_statistic.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/ucd_compat.h
 ./snmp_get_statistic.lo: ../../include/net-snmp/library/mib.h
@@ -1747,6 +1763,7 @@
 ./stash_cache.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./stash_cache.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./stash_cache.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./stash_cache.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./stash_cache.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./stash_cache.lo: ../../include/net-snmp/library/ucd_compat.h
 ./stash_cache.lo: ../../include/net-snmp/library/mib.h
@@ -1856,6 +1873,7 @@
 ./stash_to_next.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./stash_to_next.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./stash_to_next.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./stash_to_next.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./stash_to_next.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./stash_to_next.lo: ../../include/net-snmp/library/ucd_compat.h
 ./stash_to_next.lo: ../../include/net-snmp/library/mib.h
@@ -1965,6 +1983,7 @@
 ./table_array.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./table_array.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./table_array.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./table_array.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./table_array.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./table_array.lo: ../../include/net-snmp/library/ucd_compat.h
 ./table_array.lo: ../../include/net-snmp/library/mib.h
@@ -2072,6 +2091,7 @@
 ./table.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./table.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./table.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./table.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./table.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./table.lo: ../../include/net-snmp/library/ucd_compat.h
 ./table.lo: ../../include/net-snmp/library/mib.h
@@ -2179,6 +2199,7 @@
 ./table_container.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./table_container.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./table_container.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./table_container.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./table_container.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./table_container.lo: ../../include/net-snmp/library/ucd_compat.h
 ./table_container.lo: ../../include/net-snmp/library/mib.h
@@ -2286,6 +2307,7 @@
 ./table_data.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./table_data.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./table_data.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./table_data.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./table_data.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./table_data.lo: ../../include/net-snmp/library/ucd_compat.h
 ./table_data.lo: ../../include/net-snmp/library/mib.h
@@ -2393,6 +2415,7 @@
 ./table_dataset.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./table_dataset.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./table_dataset.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./table_dataset.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./table_dataset.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./table_dataset.lo: ../../include/net-snmp/library/ucd_compat.h
 ./table_dataset.lo: ../../include/net-snmp/library/mib.h
@@ -2500,6 +2523,7 @@
 ./table_iterator.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./table_iterator.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./table_iterator.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./table_iterator.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./table_iterator.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./table_iterator.lo: ../../include/net-snmp/library/ucd_compat.h
 ./table_iterator.lo: ../../include/net-snmp/library/mib.h
@@ -2608,6 +2632,7 @@
 ./table_row.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./table_row.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./table_row.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./table_row.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./table_row.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./table_row.lo: ../../include/net-snmp/library/ucd_compat.h
 ./table_row.lo: ../../include/net-snmp/library/mib.h
@@ -2715,6 +2740,7 @@
 ./table_tdata.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./table_tdata.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./table_tdata.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./table_tdata.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./table_tdata.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./table_tdata.lo: ../../include/net-snmp/library/ucd_compat.h
 ./table_tdata.lo: ../../include/net-snmp/library/mib.h
@@ -2822,6 +2848,7 @@
 ./watcher.lo: ../../include/net-snmp/library/snmpTCPDomain.h
 ./watcher.lo: ../../include/net-snmp/library/snmpUDPIPv6Domain.h
 ./watcher.lo: ../../include/net-snmp/library/snmpIPv6BaseDomain.h
+./watcher.lo: ../../include/net-snmp/library/snmpTCPIPv6Domain.h
 ./watcher.lo: ../../include/net-snmp/library/snmpIPXDomain.h
 ./watcher.lo: ../../include/net-snmp/library/ucd_compat.h
 ./watcher.lo: ../../include/net-snmp/library/mib.h
